--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
               </div>
             </div>
           </div>
-          <div class="tab-pane" id="tab-2">
+          <!-- <div class="tab-pane" id="tab-2">
             <div class="row">
               <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0">
                 <h3>Neque exercitationem debitis soluta quos debitis quo mollitia officia est</h3>
@@ -251,7 +251,7 @@
                   <li><i class="ri-check-double-line"></i> Provident mollitia neque rerum asperiores dolores quos qui a. Ipsum neque dolor voluptate nisi sed.</li>
                   <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
                 </ul>
-              </div>
+              </div> -->
               <!-- <div class="col-lg-6 order-1 order-lg-2 text-center">
                 <img src="assets/img/1.jpeg" alt="" class="img-fluid">
               </div>
