--- a/index.html
+++ b/index.html
@@ -303,8 +303,8 @@
               <!-- <div class="col-lg-6 order-1 order-lg-2 text-center">
                 <img src="assets/img/features-4.png" alt="" class="img-fluid">
               </div> -->
-            </div>
-          </div>
+            <!-- </div>
+          </div> -->
         </div>
 
       </div>
